[project]
name = "airflow"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "apache-airflow>=3.1.0",
    "apache-airflow-providers-amazon>=9.16.0",
    "apache-airflow-providers-postgres>=6.4.0",
    "httpx>=0.28.1",
    "pandas>=2.3.3",
    "ruff>=0.14.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["D100", "D104"]

[tool.ruff.lint.isort]
case-sensitive = true
order-by-type = true

[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"
